--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ const description =
       <Showcase />
       <a
         href="https://wa.me/573005410616?text=Quiero%20comprar%20unos%20lentes%20de%20contacto"
-        class="no-underline hover:bg-green-800 hover:text-white flex justify-end fixed bottom-3 rounded-full px-1 bg-white text-green-800 font-bold right-3 w-60 text">
+        class="no-underline hover:bg-green-800 hover:text-white flex justify-center fixed bottom-3 rounded-full px-1 bg-white text-green-800 font-bold right-3 w-60 sm:w-80 text z-10">
         <button
         id="open-nav-button"
         type="button"
@@ -82,7 +82,7 @@ const description =
       </button>
       </a>
     </div>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4Shvz_zQ1fYZEGGTm5CBaoNshmz_WMg-VbjgYLeQGZB-UCQ/viewform?embedded=true" class="w-full" scrolling="no" height="805" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4Shvz_zQ1fYZEGGTm5CBaoNshmz_WMg-VbjgYLeQGZB-UCQ/viewform?embedded=true" class="w-full" height="805" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <Footer />
   </body>
 </html>
