corregido problema con javascript

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -100,9 +100,9 @@ const navItems: Array<NavItem> = [
   const closeNavButton = document.querySelector("#close-nav-button");
 
   invariant(header, "header should not be null");
-  invariant(menu, "menu should not be null");
+  // invariant(menu, "menu should not be null");
   invariant(openNavButton, "openNavButton should not be null");
-  invariant(closeNavButton, "closeNavButton should not be null");
+  // invariant(closeNavButton, "closeNavButton should not be null");
 
   const openMenu = () => {
     MicroModal.show(menuModalId, { disableScroll: true });
@@ -113,18 +113,18 @@ const navItems: Array<NavItem> = [
   };
 
   openNavButton.addEventListener("click", openMenu);
-  closeNavButton.addEventListener("click", closeMenu);
+  // closeNavButton.addEventListener("click", closeMenu);
 
   // document.addEventListener("scroll", () => {
   //   const d = page.clientHeight - page.scrollTop - header.offsetHeight;
   //   header.classList.toggle("fixed-header", d < 0);
   // });
 
-  menu.addEventListener("click", (event) => {
-    if ((event.target as HTMLElement).tagName === "A") {
-      closeMenu();
-    }
-  });
+  // menu.addEventListener("click", (event) => {
+  //   if ((event.target as HTMLElement).tagName === "A") {
+  //     closeMenu();
+  //   }
+  // });
 </script>
 
 <noscript>
